--- a/index.html
+++ b/index.html
@@ -176,9 +176,7 @@
                   <div class="top-collect-copy">
                     <h2>Top Collections</h2>
                     <p>Shop our selection of best-sellers now</p>
-                    <a class="btn btn-primary" href="/sales_most_popular.html"
-                      >Shop All</a
-                    >
+                    <a class="btn btn-primary" href="#">Shop All</a>
                   </div>
                 </div>
                 <div class="collection-slider">
