--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link rel="icon" type="image/x-icon" href="./include/images/favicon.png" />
     <link href="include/css/style.css" rel="stylesheet" type="text/css" />
     <script
       src="https://kit.fontawesome.com/20dd01c86d.js"
