product and about

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
               <div class="navbar-inside ml-auto">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="#!">Shop</a>
+                    <a class="nav-link" href="product.html">Product</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#!">sale</a>
+                    <a class="nav-link" href="aboutus.html">About</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a
@@ -961,30 +961,21 @@
           <div class="region region-copyright row">
             <section class="col-xs-12 justify-center">
               <p>
-                <a href="terms" target="_blank" title="Terms">Terms</a>
+                <a href="#" target="_blank" title="Terms">Terms</a>
+                <span class="dot">•</span>
+                <a href="#" target="_blank" title="Privacy Policy">Privacy</a>
+                <span class="dot">•</span>
+                <a href="#" target="_blank">Accessibility Policy</a>
                 <span class="dot">•</span>
                 <a
-                  href="https://privacy.roveconcepts.com/privacy-policy"
-                  target="_blank"
-                  title="Privacy Policy"
-                  >Privacy</a
-                >
-                <span class="dot">•</span>
-                <a
-                  href="https://adasitecompliancetools.com/ap.asp?h=ROVCON"
-                  target="_blank"
-                  >Accessibility Policy</a
-                >
-                <span class="dot">•</span>
-                <a
-                  href="https://privacy.roveconcepts.com/privacy-policy#california-privacy-notice"
+                  href="#"
                   target="_blank"
                   title="California Privacy Notice Privacy Policy"
                   >California Privacy Notice</a
                 >
                 <span class="dot">•</span>
                 <a
-                  href="https://privacy.roveconcepts.com/opt-out"
+                  href="#"
                   target="_blank"
                   title="Not Sell or Share My Personal Information"
                   >Your Privacy Choices
