--- a/product.html
+++ b/product.html
@@ -1591,11 +1591,7 @@
                                   <div class="pro-details-cart btn-hover">
                                     <a href="#">Add To Cart</a>
                                   </div>
-                                  <div class="pro-details-compare">
-                                    <a href="#"
-                                      ><i class="fa fa-files-o"></i
-                                    ></a>
-                                  </div>
+                                  <div class="pro-details-compare"></div>
                                 </div>
                               </div>
                             </div>
@@ -1672,11 +1668,7 @@
                                   <div class="pro-details-cart btn-hover">
                                     <a href="#">Add To Cart</a>
                                   </div>
-                                  <div class="pro-details-compare">
-                                    <a href="#"
-                                      ><i class="fa fa-files-o"></i
-                                    ></a>
-                                  </div>
+                                  <div class="pro-details-compare"></div>
                                 </div>
                               </div>
                             </div>
@@ -1749,11 +1741,7 @@
                                   <div class="pro-details-cart btn-hover">
                                     <a href="#">Add To Cart</a>
                                   </div>
-                                  <div class="pro-details-compare">
-                                    <a href="#"
-                                      ><i class="fa fa-files-o"></i
-                                    ></a>
-                                  </div>
+                                  <div class="pro-details-compare"></div>
                                 </div>
                               </div>
                             </div>
@@ -1828,11 +1816,7 @@
                                   <div class="pro-details-cart btn-hover">
                                     <a href="#">Add To Cart</a>
                                   </div>
-                                  <div class="pro-details-compare">
-                                    <a href="#"
-                                      ><i class="fa fa-files-o"></i
-                                    ></a>
-                                  </div>
+                                  <div class="pro-details-compare"></div>
                                 </div>
                               </div>
                             </div>
@@ -1905,11 +1889,7 @@
                                   <div class="pro-details-cart btn-hover">
                                     <a href="#">Add To Cart</a>
                                   </div>
-                                  <div class="pro-details-compare">
-                                    <a href="#"
-                                      ><i class="fa fa-files-o"></i
-                                    ></a>
-                                  </div>
+                                  <div class="pro-details-compare"></div>
                                 </div>
                               </div>
                             </div>
@@ -1986,11 +1966,7 @@
                                   <div class="pro-details-cart btn-hover">
                                     <a href="#">Add To Cart</a>
                                   </div>
-                                  <div class="pro-details-compare">
-                                    <a href="#"
-                                      ><i class="fa fa-files-o"></i
-                                    ></a>
-                                  </div>
+                                  <div class="pro-details-compare"></div>
                                 </div>
                               </div>
                             </div>
@@ -2067,11 +2043,7 @@
                                   <div class="pro-details-cart btn-hover">
                                     <a href="#">Add To Cart</a>
                                   </div>
-                                  <div class="pro-details-compare">
-                                    <a href="#"
-                                      ><i class="fa fa-files-o"></i
-                                    ></a>
-                                  </div>
+                                  <div class="pro-details-compare"></div>
                                 </div>
                               </div>
                             </div>
@@ -2144,11 +2116,7 @@
                                   <div class="pro-details-cart btn-hover">
                                     <a href="#">Add To Cart</a>
                                   </div>
-                                  <div class="pro-details-compare">
-                                    <a href="#"
-                                      ><i class="fa fa-files-o"></i
-                                    ></a>
-                                  </div>
+                                  <div class="pro-details-compare"></div>
                                 </div>
                               </div>
                             </div>
@@ -2225,11 +2193,7 @@
                                   <div class="pro-details-cart btn-hover">
                                     <a href="#">Add To Cart</a>
                                   </div>
-                                  <div class="pro-details-compare">
-                                    <a href="#"
-                                      ><i class="fa fa-files-o"></i
-                                    ></a>
-                                  </div>
+                                  <div class="pro-details-compare"></div>
                                 </div>
                               </div>
                             </div>
@@ -2302,11 +2266,7 @@
                                   <div class="pro-details-cart btn-hover">
                                     <a href="#">Add To Cart</a>
                                   </div>
-                                  <div class="pro-details-compare">
-                                    <a href="#"
-                                      ><i class="fa fa-files-o"></i
-                                    ></a>
-                                  </div>
+                                  <div class="pro-details-compare"></div>
                                 </div>
                               </div>
                             </div>
@@ -2383,11 +2343,7 @@
                                   <div class="pro-details-cart btn-hover">
                                     <a href="#">Add To Cart</a>
                                   </div>
-                                  <div class="pro-details-compare">
-                                    <a href="#"
-                                      ><i class="fa fa-files-o"></i
-                                    ></a>
-                                  </div>
+                                  <div class="pro-details-compare"></div>
                                 </div>
                               </div>
                             </div>
