--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="include/css/bootstrap.min.css"
       rel="stylesheet"
