--- a/aboutus.html
+++ b/aboutus.html
@@ -68,7 +68,7 @@
                   <li class="nav-item dropdown">
                     <a
                       class="nav-link dropdown-toggle"
-                      href="https://www.google.co.in/"
+                      href="#"
                       id="about"
                       data-toggle="dropdown"
                       aria-haspopup="true"
