--- a/product.html
+++ b/product.html
@@ -68,7 +68,7 @@
                   <li class="nav-item dropdown">
                     <a
                       class="nav-link dropdown-toggle"
-                      href="https://www.google.co.in/"
+                      href="#"
                       id="about"
                       data-toggle="dropdown"
                       aria-haspopup="true"
@@ -324,13 +324,13 @@
                                 - <span class="discounted-price">£672.00</span>
                               </p>
                               <div class="product-rating">
-                                <span class="rating">
+                                <!-- <span class="rating">
                                   <i class="fa fa-star"></i>
                                   <i class="fa fa-star"></i>
                                   <i class="fa fa-star"></i>
                                   <i class="fa fa-star"></i>
                                   <i class="fa fa-star"></i>
-                                </span>
+                                </span> -->
                               </div>
                               <!-- <div
                                 class="product-action action-rs-small action-rs-small action-rs-small"
@@ -640,13 +640,13 @@
                                 - <span class="discounted-price">£328.00</span>
                               </p>
                               <div class="product-rating">
-                                <span class="rating">
+                                <!-- <span class="rating">
                                   <i class="fa fa-star"></i>
                                   <i class="fa fa-star"></i>
                                   <i class="fa fa-star"></i>
                                   <i class="fa fa-star"></i>
                                   <i class="fa fa-star"></i>
-                                </span>
+                                </span> -->
                               </div>
                             </div>
                           </div>
@@ -677,13 +677,13 @@
                                 - <span class="discounted-price">£672.00</span>
                               </p>
                               <div class="product-rating">
-                                <span class="rating">
+                                <!-- <span class="rating">
                                   <i class="fa fa-star"></i>
                                   <i class="fa fa-star"></i>
                                   <i class="fa fa-star"></i>
                                   <i class="fa fa-star"></i>
                                   <i class="fa fa-star"></i>
-                                </span>
+                                </span> -->
                               </div>
                             </div>
                           </div>
@@ -715,13 +715,13 @@
                                     >
                                   </p>
                                   <div class="product-rating">
-                                    <span class="rating">
+                                    <!-- <span class="rating">
                                       <i class="fa fa-star"></i>
                                       <i class="fa fa-star"></i>
                                       <i class="fa fa-star"></i>
                                       <i class="fa fa-star"></i>
                                       <i class="fa fa-star"></i>
-                                    </span>
+                                    </span> -->
                                   </div>
                                 </div>
                               </div>
@@ -751,13 +751,13 @@
                                     >
                                   </p>
                                   <div class="product-rating">
-                                    <span class="rating">
+                                    <!-- <span class="rating">
                                       <i class="fa fa-star"></i>
                                       <i class="fa fa-star"></i>
                                       <i class="fa fa-star"></i>
                                       <i class="fa fa-star"></i>
                                       <i class="fa fa-star"></i>
-                                    </span>
+                                    </span> -->
                                   </div>
                                 </div>
                               </div>
@@ -791,13 +791,13 @@
                                     >
                                   </p>
                                   <div class="product-rating">
-                                    <span class="rating">
+                                    <!-- <span class="rating">
                                       <i class="fa fa-star"></i>
                                       <i class="fa fa-star"></i>
                                       <i class="fa fa-star"></i>
                                       <i class="fa fa-star"></i>
                                       <i class="fa fa-star"></i>
-                                    </span>
+                                    </span> -->
                                   </div>
                                 </div>
                               </div>
@@ -827,13 +827,13 @@
                                     >
                                   </p>
                                   <div class="product-rating">
-                                    <span class="rating">
+                                    <!-- <span class="rating">
                                       <i class="fa fa-star"></i>
                                       <i class="fa fa-star"></i>
                                       <i class="fa fa-star"></i>
                                       <i class="fa fa-star"></i>
                                       <i class="fa fa-star"></i>
-                                    </span>
+                                    </span> -->
                                   </div>
                                 </div>
                               </div>
@@ -869,13 +869,13 @@
                                 <span class="discounted-price">£589.00</span>
                               </p>
                               <div class="product-rating">
-                                <span class="rating">
+                                <!-- <span class="rating">
                                   <i class="fa fa-star"></i>
                                   <i class="fa fa-star"></i>
                                   <i class="fa fa-star"></i>
                                   <i class="fa fa-star"></i>
                                   <i class="fa fa-star"></i>
-                                </span>
+                                </span> -->
                               </div>
                             </div>
                           </div>
