update responsive code

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                     <li>Early access to sales and new products releases</li>
                     <li>Extra perks throughout the year</li>
                   </ul>
-                  <a class="btn btn-default" href="/membership">Join Now</a>
+                  <a class="btn btn-default" href="#">Join Now</a>
                   <p class="front-mem-note">*Promotional Offer</p>
                 </div>
               </div>
@@ -888,7 +888,6 @@
                 <form
                   class="klaviyo-subscribe-form"
                   autocomplete="on"
-                  action="/newsletter-confirmation"
                   method="post"
                   id="uc-klaviyo-subscribe-form"
                   accept-charset="UTF-8"
@@ -929,14 +928,9 @@
                           ></label
                         > -->
                       </div>
-                      <input
-                        type="hidden"
-                        name="form_build_id"
-                        value="form-bsnwYwOOca3p0DdDFzKV3KxrIQ_m7jPZ1ukwmkzNWGc"
-                      /><input
+                      <input type="hidden" name="form_build_id" /><input
                         type="hidden"
                         name="form_id"
-                        value="uc_klaviyo_subscribe_form"
                       /><span class="input-group-btn"
                         ><div
                           class="form-actions form-wrapper form-group"
@@ -945,10 +939,8 @@
                           <button
                             class="btn btn-default form-submit ajax-processed"
                             type="submit"
-                            id="klaviyo-submit"
                             name="op"
                             value="SIGN UP!"
-                            fdprocessedid="2895oc"
                           >
                             SIGN UP!
                           </button>
