update the code

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div
             class="nav-inside d-flex align-items-center justify-content-between"
           >
-            <a class="navbar-brand" href="#"
+            <a class="navbar-brand" href="index.html"
               ><img src="include/images/deltalogo.png" alt=""
             /></a>
             <button
@@ -63,9 +63,15 @@
                     <a class="nav-link" href="product.html">Product</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="shoplook.html">Shop the look</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Lifestyle</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="aboutus.html">About</a>
                   </li>
-                  <li class="nav-item dropdown">
+                  <!-- <li class="nav-item dropdown">
                     <a
                       class="nav-link dropdown-toggle"
                       href="#"
@@ -75,7 +81,7 @@
                       aria-expanded="false"
                       >Lifestyle</a
                     >
-                    <!-- <ul class="dropdown-menu" aria-labelledby="about">
+                    <ul class="dropdown-menu" aria-labelledby="about">
                       <li><a class="dropdown-item" href="#!">Dropdown 1</a></li>
                       <li>
                         <a
@@ -88,36 +94,41 @@
                       <li><a class="dropdown-item" href="#!">Dropdown 4</a></li>
                       <li><a class="dropdown-item" href="#!">Dropdown 5</a></li>
                       <li><a class="dropdown-item" href="#!">Dropdown 6</a></li>
-                    </ul> -->
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#!">Discover</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#!">Showroom</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#!">Outlet</a>
-                  </li>
+                    </ul>
+                  </li> -->
                 </ul>
 
                 <div class="upper-header">
                   <div class="upper-header-left">
-                    <div class="search">
+                    <!-- <div class="search">
                       <img
                         src="./include/images/header/search.svg"
                         alt="search"
                       />
+                    </div> -->
+                    <div class="search-box">
+                      <input
+                        class="search-txt"
+                        type="text"
+                        name=""
+                        placeholder="Type to Search"
+                      />
+                      <a class="search-btn" href="#">
+                        <img
+                          src="./include/images/header/search.svg"
+                          alt="search"
+                        />
+                      </a>
                     </div>
-                    <div class="profile">
+                    <!-- <div class="profile">
                       <img
                         src="./include/images/header/profilelux.svg"
                         alt="profile"
                       />
-                    </div>
-                    <div class="cart">
+                    </div> -->
+                    <!-- <div class="cart">
                       <img src="./include/images/header/cart.svg " alt="cart" />
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
