--- a/product-detail.html
+++ b/product-detail.html
@@ -178,35 +178,35 @@
                   <div>
                     <div class="product-details-item">
                       <img
-                        src="https://cdn.roveconcepts.com/sites/default/files/styles/picture_1024_1x/public/Belia_Open_End_Sofa_Venice_Suede_Latte_2.jpg "
+                        src="https://www.tikahome.cn/upload/20230710/202307100940364764.jpg "
                       />
                     </div>
                   </div>
                   <div>
                     <div class="product-details-item">
                       <img
-                        src="https://cdn.roveconcepts.com/sites/default/files/styles/picture_1024_1x/public/Belia_Open_End_Sofa_Venice_Suede_Latte_2.jpg"
+                        src="https://www.tikahome.cn/upload/20230710/202307100939254913.jpg"
                       />
                     </div>
                   </div>
                   <div>
                     <div class="product-details-item">
                       <img
-                        src="https://cdn.roveconcepts.com/sites/default/files/styles/picture_1024_1x/public/Belia_Open_End_Sofa_Venice_Suede_Latte_3.jpg"
+                        src="https://www.tikahome.cn/upload/20230710/202307100940364764.jpg "
                       />
                     </div>
                   </div>
                   <div>
                     <div class="product-details-item">
                       <img
-                        src="https://cdn.roveconcepts.com/sites/default/files/styles/picture_1024_1x/public/Belia_Open_End_Sofa_Venice_Suede_Latte_4.jpg "
+                        src="https://www.tikahome.cn/upload/20230710/202307100939269308.jpg"
                       />
                     </div>
                   </div>
                   <div>
                     <div class="product-details-item">
                       <img
-                        src="https://cdn.roveconcepts.com/sites/default/files/styles/picture_1024_1x/public/YVR-Showroom-Photoshoot_0026_5.jpg"
+                        src="https://www.tikahome.cn/upload/20230710/202307100940364764.jpg "
                       />
                     </div>
                   </div>
@@ -223,7 +223,7 @@
                     <h2>DIMENSIONS</h2>
                   </div>
                   <img
-                    src="./include/images/product-detail/dimension.jpg"
+                    src="https://www.tikahome.cn/upload/202307/07/202307071138101151.jpg"
                     alt=""
                   />
                 </div>
@@ -231,7 +231,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-12">
               <div class="product-details-content quickview-content">
-                <h2>Knox Chaise Sofa Gray</h2>
+                <h2>Sofa</h2>
                 <div class="product-rating-stock">
                   <div class="product-dec-rating-reviews">
                     <div class="product-dec-rating">
