update the code

--- a/product-detail.html
+++ b/product-detail.html
@@ -41,7 +41,7 @@
           <div
             class="nav-inside d-flex align-items-center justify-content-between"
           >
-            <a class="navbar-brand" href="#"
+            <a class="navbar-brand" href="index.html"
               ><img src="include/images/deltalogo.png" alt=""
             /></a>
             <button
@@ -231,8 +231,9 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-12">
               <div class="product-details-content quickview-content">
+                <h2>D-104</h2>
                 <h2>Sofa</h2>
-                <div class="product-rating-stock">
+                <!-- <div class="product-rating-stock">
                   <div class="product-dec-rating-reviews">
                     <div class="product-dec-rating">
                       <i class="fa fa-star"></i>
@@ -250,21 +251,22 @@
                       ><i class="dlicon ui-1_check-circle-08"></i>in stock</span
                     >
                   </div>
-                </div>
+                </div> -->
                 <p class="product-price product-details-price">
                   <span class="main-price discounted"><del>£723.00</del></span>
                   <span class="discounted-price">£672.00</span>
                 </p>
+                <p class="fz-16">Structure: Solid wood</p>
                 <p class="fz-16">
-                  Donec nunc nunc, gravida vitae diam vel, varius interdum erat.
-                  Quisque a nunc vel diam auctor commodo. Curabitur blandit
-                  ultrices exurabitur ut magna dignissim, dignissi, Nullam vitae
-                  venenatis elit. Proin dui lacus, viverra at imperdiet non,
-                  facilisis eget orci. Vivamus ac elit tellus. Vestibulum nulla
-                  dui, consequat vitae diam eu, pretium finibus libero. Class
-                  aptent taciti sociosqu ad litora torquent per conubia nostra,
-                  per inceptos himenaeos. Aliquam vitae neque tellus.
+                  Seat/Backrest: Solid wood with flexible foam and High-grade
+                  feather
                 </p>
+
+                <p class="fz-16">
+                  Seat/Backrest finish: Available in a variety of fabrics,
+                  microfiber leathers and leathers
+                </p>
+
                 <div class="pro-details-quality">
                   <div class="quantity quantity--2">
                     <input
@@ -281,9 +283,7 @@
                     <a href="cart.html">Add To Cart</a>
                   </div>
                 </div>
-                <div class="pro-details-sku">
-                  <span>SKU: D-12525</span>
-                </div>
+
                 <div class="pro-details-meta">
                   <span>Categories : </span>
                   <ul>
