update the code

--- a/index.html
+++ b/index.html
@@ -71,41 +71,10 @@
                   <li class="nav-item">
                     <a class="nav-link" href="aboutus.html">About</a>
                   </li>
-                  <!-- <li class="nav-item dropdown">
-                    <a
-                      class="nav-link dropdown-toggle"
-                      href="#"
-                      id="about"
-                      data-toggle="dropdown"
-                      aria-haspopup="true"
-                      aria-expanded="false"
-                      >Lifestyle</a
-                    >
-                    <ul class="dropdown-menu" aria-labelledby="about">
-                      <li><a class="dropdown-item" href="#!">Dropdown 1</a></li>
-                      <li>
-                        <a
-                          class="dropdown-item"
-                          href="https://www.google.co.in/"
-                          >Dropdown 2</a
-                        >
-                      </li>
-                      <li><a class="dropdown-item" href="#!">Dropdown 3</a></li>
-                      <li><a class="dropdown-item" href="#!">Dropdown 4</a></li>
-                      <li><a class="dropdown-item" href="#!">Dropdown 5</a></li>
-                      <li><a class="dropdown-item" href="#!">Dropdown 6</a></li>
-                    </ul>
-                  </li> -->
                 </ul>
 
                 <div class="upper-header">
                   <div class="upper-header-left">
-                    <!-- <div class="search">
-                      <img
-                        src="./include/images/header/search.svg"
-                        alt="search"
-                      />
-                    </div> -->
                     <div class="search-box">
                       <input
                         class="search-txt"
@@ -120,22 +89,10 @@
                         />
                       </a>
                     </div>
-                    <!-- <div class="profile">
-                      <img
-                        src="./include/images/header/profilelux.svg"
-                        alt="profile"
-                      />
-                    </div> -->
-                    <!-- <div class="cart">
-                      <img src="./include/images/header/cart.svg " alt="cart" />
-                    </div> -->
                   </div>
                 </div>
               </div>
             </div>
-            <!-- <div class="header-right d-none d-md-block">
-              <a href="#" class="btn btn-default header-btn">Contact</a>
-            </div> -->
           </div>
         </div>
       </nav>
@@ -153,18 +110,18 @@
           Your browser does not support HTML5 video.
         </video>
         <div class="container">
-          <div
+          <!-- <div
             class="row os-animation"
             data-os-animation="fadeIn"
             data-os-animation-delay="0.5s"
-          >
-            <div class="col-lg-12">
-              <div class="banner-text">
-                <h1>Refined Luxury Living</h1>
-                <a href="#" class="btn btn-default">Shop Now</a>
-              </div>
+          > -->
+          <div class="col-lg-12">
+            <div class="banner-text">
+              <h1>Refined Luxury Living</h1>
+              <a href="#" class="btn btn-default">Shop Now</a>
             </div>
           </div>
+          <!-- </div> -->
           <div class="banner-bottom-text">
             <div class="banner-text-item">
               <span> Luxury Eco Materials </span>
