update the home page changes

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </div>
       <!--============================== Content End ==============================-->
       <!--============================== Content Start ==============================-->
-      <div class="content-container">
+      <div class="contents-container container-width">
         <div class="container">
           <div
             class="row os-animation"
@@ -375,6 +375,26 @@
                 </div>
                 <div class="dqe-copy-cont">
                   <h3 class="dqe-header">Celebrity Homes</h3>
+                  <p>
+                    Our most-loved designs, loved by some of our favorite
+                    celebrities and influencers.
+                  </p>
+                  <button type="button" class="url">
+                    Discover
+                    <svg
+                      viewBox="0 0 24 24"
+                      width="24"
+                      height="24"
+                      stroke="#333"
+                      stroke-width="2"
+                      fill="none"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="css-i6dzq1"
+                    >
+                      <polyline points="9 18 15 12 9 6"></polyline>
+                    </svg>
+                  </button>
                 </div>
               </a>
               <a class="dqe-block-cont" href="#"
@@ -386,6 +406,25 @@
                 </div>
                 <div class="dqe-copy-cont">
                   <h3 class="dqe-header">Commercial Host</h3>
+                  <p>
+                    Not close to a showroom? Find a commercial host near you.
+                  </p>
+                  <button type="button" class="url">
+                    Discover
+                    <svg
+                      viewBox="0 0 24 24"
+                      width="24"
+                      height="24"
+                      stroke="#333"
+                      stroke-width="2"
+                      fill="none"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="css-i6dzq1"
+                    >
+                      <polyline points="9 18 15 12 9 6"></polyline>
+                    </svg>
+                  </button>
                 </div>
               </a>
               <a class="dqe-block-cont" href="#" target="_blank"
@@ -397,6 +436,26 @@
                 </div>
                 <div class="dqe-copy-cont">
                   <h3 class="dqe-header">Host Program</h3>
+                  <p>
+                    Connect virtually with a real customer and get their honest
+                    feedback.
+                  </p>
+                  <button type="button" class="url">
+                    Discover
+                    <svg
+                      viewBox="0 0 24 24"
+                      width="24"
+                      height="24"
+                      stroke="#333"
+                      stroke-width="2"
+                      fill="none"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="css-i6dzq1"
+                    >
+                      <polyline points="9 18 15 12 9 6"></polyline>
+                    </svg>
+                  </button>
                 </div>
               </a>
             </div>
@@ -405,7 +464,7 @@
       </div>
       <!--============================== Content End ==============================-->
       <!--============================== Content Start ==============================-->
-      <div class="content-container">
+      <div class="content-container border-top border-bottom">
         <div class="container">
           <div
             class="row os-animation"
@@ -415,7 +474,7 @@
             <div class="as-seen-wrapper front-titles">
               <div class="limit-conten">
                 <h2 class="front-header-small">
-                  <a href="//www.roveconcepts.com/press">In the Press</a>
+                  <a href="/">In the Press</a>
                 </h2>
                 <p>
                   We've been featured in magazines and media across the country.
