--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                   <h3 style="text-align: center;">WARM &amp; WELCOMING</h3> 
                   <p style="text-align: center;">Greet the change of season with our bestselling Carson light.</p> 
                   <p style="text-align: center;">
-                    <a href="https://www.rejuvenation.com/shop/outdoor/all-front-porch/?cm_re=hpbanner13-_-default-_-frontporch">Shop Front Porch ›</a>
+                    <!-- <a href="/">Shop Front Porch ›</a> -->
                   </p>
                 </div>
                 <div id="imagerollover-1805461442" class="section imagerollover">
