--- a/shoplook.html
+++ b/shoplook.html
@@ -79,7 +79,7 @@
               <div class="navbar-inside m-auto">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="product.html">Product</a>
+                    <a class="nav-link" href="/">Product</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="shoplook.html"
